# SSH_TUI

./: .gitignore  .pylintrc  Dockerfile  README.md  dockerfile  main.py  notes.kra  notes.kra~  pyproject.toml  requirements.txt  rich_test.py  ssh_key
src/: session.py  session_tui.py  ssh_session.py  tui.py
src/asyncssh/: session.py
src/core/: __session_helpers.py  logging.py  session.py  session_state.py
src/core/io/: input_handler.py  writer.py
src/core/lifecycle/: session_main.py  session_start.py  session_stop.py
src/core/session/: session.py  session_main.py  session_manager.py  session_state.py
src/events/: __init__.py  cursor_events.py  exit_events.py  global_event_handler.py  global_events.py  input_events.py  page_events.py  session_events.py  ui_events.py
src/io/: input_handler.py
src/navigation_nodes/: tree.py
src/pages/: __tui_helpers.py  mainmenu.py  page.py  test_page.py
src/pages/panels/: header.py
src/renderer/: render_context.py  renderer.py
src/server_components/: session.py  writer.py
src/session/: session.py  session_main.py  session_manager.py
src/tui/: tui.py
src/ui/: cursor.py  navigation_nodes.py  widget.py
src/ui/navigation/: cursor.py
src/ui/pages/: page.py
src/ui/pages/mainmenu/: __init__.py  body.py  footer.py  mainmenu.py
src/ui/widgets/: button.py  cursor.py  tickbox.py  widget.py
